--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-mdx-remote": "^4.4.1",
     "novel": "^0.1.22",
     "openai-edge": "^1.2.2",
+    "polyfire-js": "^0.2.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-textarea-autosize": "^8.5.3",
