--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@polyfact/chat": "^0.1.32",
     "@prisma/client": "^5.5.2",
     "@tremor/react": "^3.11.1",
     "@upstash/ratelimit": "^0.4.4",
