--- a/.env.example
+++ b/.env.example
@@ -34,3 +34,6 @@ TEAM_ID_VERCEL=
 
 # OpenAI API key for AI text generation – get one here: https://platform.openai.com/account/api-keys
 OPENAI_API_KEY=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
