--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "14.0.2",
     "next-auth": "4.24.5",
     "next-mdx-remote": "^4.4.1",
+    "nodemailer": "^6.9.7",
     "novel": "^0.1.22",
     "openai-edge": "^1.2.2",
     "polyfire-js": "^0.2.19",
