--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "polyfire-js": "^0.2.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-textarea-autosize": "^8.5.3",
     "react-tweet": "^3.1.1",
     "remark": "^14.0.3",
