--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@vercel/postgres": "^0.5.1",
     "ai": "^2.2.22",
     "clsx": "^2.0.0",
+    "crypto": "^1.0.1",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "focus-trap-react": "^10.2.3",
     "framer-motion": "^10.16.4",
     "gray-matter": "^4.0.3",
+    "jose": "^5.1.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.292.0",
     "nanoid": "^4.0.2",
