--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "crypto": "^1.0.1",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
+    "flowbite-react": "^0.6.4",
     "focus-trap-react": "^10.2.3",
     "framer-motion": "^10.16.4",
     "gray-matter": "^4.0.3",
