--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@polyfact/chat": "^0.1.32",
     "@prisma/client": "^5.5.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-select": "^2.0.0",
     "@tremor/react": "^3.11.1",
     "@upstash/ratelimit": "^0.4.4",
     "@vercel/analytics": "^1.1.1",
@@ -22,11 +23,13 @@
     "add": "^2.0.6",
     "ai": "^2.2.22",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^1.41.0",
     "clsx": "^2.0.0",
     "crypto": "^1.0.1",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "focus-trap-react": "^10.2.3",
+    "formidable": "3",
     "framer-motion": "^10.16.4",
     "gray-matter": "^4.0.3",
     "jose": "^5.1.1",
