--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "focus-trap-react": "^10.2.3",
     "formidable": "3",
     "framer-motion": "^10.16.16",
+    "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "jose": "^5.1.1",
     "js-cookie": "^3.0.5",
