completed uploading multiple image files

--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,9 @@ OPENAI_API_KEY=
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
+S3_UPLOAD_KEY=
+S3_UPLOAD_SECRET=
+S3_UPLOAD_BUCKET=
+S3_UPLOAD_REGION=
+
