--- a/package.json
+++ b/package.json
@@ -40,12 +40,15 @@
     "next": "14.0.2",
     "next-auth": "4.24.5",
     "next-mdx-remote": "^4.4.1",
+    "next-s3-upload": "^0.3.4",
     "nodemailer": "^6.9.7",
     "novel": "^0.1.22",
     "openai-edge": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.12.0",
+    "react-multiple-image-uploader": "^1.0.3",
     "react-textarea-autosize": "^8.5.3",
     "react-tweet": "^3.1.1",
     "remark": "^14.0.3",
