--- a/package.json
+++ b/package.json
@@ -47,7 +47,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-grid-gallery": "^1.0.1-alpha.0",
     "react-icons": "^4.12.0",
+    "react-image-gallery": "^1.3.0",
+    "react-modal-image": "^2.6.0",
     "react-multiple-image-uploader": "^1.0.3",
     "react-textarea-autosize": "^8.5.3",
     "react-tweet": "^3.1.1",
